--- a/IFN666_Assessment3/app.json
+++ b/IFN666_Assessment3/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "entryPoint": "app/App.js",
     "name": "IFN666_Assessment3",
     "slug": "IFN666_Assessment3",
     "version": "1.0.0",
